--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,32 +1,88 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+
+@twitter-blue: #1da1f2;
+
+body {
+	background-color: @twitter-blue;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+input[type=text] {
+	border: 1px solid #aaa;
+	padding: 6px 12px;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container {
+	width: 600px;
+	margin: 50px auto;
+	background-color: #f5f5f5;
+	border-radius: 4px;
+	padding: 20px;
+	box-shadow: 2px 2px 30px 0 rgba(0,0,0,.4);
 }
 
-.App-link {
-  color: #61dafb;
+.searchbox {
+	margin-bottom: 24px;
+
+	input {
+		width: 100%;
+		height: 50px;
+	}
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tweet-container {
+	background-color: #fff;
+	margin-bottom: 16px;
+	box-shadow: 2px 2px 10px 0 rgba(0,0,0,.2);
+	border-radius: 4px;
+	display: grid;
+	grid-template-columns: 80px auto;
+	grid-template-rows: 30px auto;
+	grid-template-areas: 
+		"image info"
+		"image content";
+}
+
+.user-picture {
+	grid-area: image;
+	border-radius: 50%;
+	height: 60px;
+	width: 60px;
+	margin: 10px;
+	border: 2px solid #aaa;
+}
+
+.tweet-info {
+	grid-area: info;
+	margin: 10px 10px 0;
+
+	.tweet-author {
+		font-weight: bold;
+		margin-right: 8px;
+	}
+
+	.tweet-username {
+		color: #888;
+
+		&::before {
+			content: '@';
+		}
+	}
+
+	.tweet-datetime {
+		float: right;
+		color: #888;
+		font-size: .8em;
+	}
+}
+
+.tweet-content {
+	grid-area: content;
+	margin: 10px;
+
+	.tweet-media {
+		margin-top: 10px;
+	}
 }
