--- a/src/less/app.less
+++ b/src/less/app.less
@@ -11,7 +11,31 @@ body {
 input[type=text] {
 	border: 1px solid #aaa;
 	padding: 6px 12px;
+	border-radius: 4px;
+	transition: all ease-in .2s;
+	height: 50px;
+	font-size: 16px;
 
+	&:focus {
+		outline: none;
+		box-shadow: 1px 1px 5px 0 rgba(0,0,0,.2);
+	}
+}
+
+button {
+	height: 50px;
+	font-size: 16px;
+	border-radius: 4px;
+	color: white; 
+	background-color: #1da1f2;
+	border: 1px solid #0F58DB;
+	cursor: pointer;
+	box-shadow: 1px 1px 5px 0 rgba(0,0,0,.2);
+	transition: all ease-in .15s;
+
+	&:hover {
+		background-color: darken(#1da1f2, 10%);
+	}
 }
 
 .container {
@@ -25,11 +49,21 @@ input[type=text] {
 
 .searchbox {
 	margin-bottom: 24px;
+	display: grid;
+	grid-template-columns: auto 140px;
+	grid-column-gap: 16px;
 
-	input {
+	input {	
 		width: 100%;
-		height: 50px;
 	}
+
+	#btn-search {
+		width: 100%;
+	}
+}
+
+#no-tweets-message {
+	text-align: center;
 }
 
 .tweet-container {
